fix: force theme in certain mobile dark mode browser (2)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,8 +20,11 @@
   box-sizing: border-box;
 }
 
-html {
+:root {
   color-scheme: dark;
+}
+
+html {
   forced-color-adjust: none;
 }
 
